# gpt-code-assistant

./:  requirements.txt   .bandit  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  verification.yml
ai/: open_ai.py  tokens.py
core/: ai.py  analytics.py  config.py  functions.py  main.py  sentry.py
core/tests/: test_truncate_text.py
data/: chroma.py  database.py  file_sections.py  files.py  indexes.py  projects.py  query.py
index/: embeddings.py  file_processor.py
repository/: file_sections.py  files.py  indexes.py  projects.py
tests/core/: test_functions.py
