[tool.poetry]
name = "gpt-code-search"
version = "0.0.5"
description = "gpt-code-search enables you to search your codebase with natural language."
authors = ["narenmanoharan <narenkmanoharan@gmail.com>", "skovy <smiskoviak@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "core"}]
homepage = "https://wolfia.com"
repository = "https://github.com/wolfia-app/gpt-code-search"
keywords = ["gpt", "code", "search", "wolfia", "gpt4", "llm"]

[tool.poetry.urls]
issues = "https://github.com/wolfia-app/gpt-code-search/issues"
discussions = "https://github.com/wolfia-app/gpt-code-search/discussions"
wiki = "https://github.com/wolfia-app/gpt-code-search/wiki"

[tool.poetry.scripts]
gcs = "core.main:app"

[tool.poetry.dependencies]
python = "^3.9.17"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.4.2"
tiktoken = "^0.4.0"
openai = "^0.27.8"
termcolor = "^2.3.0"
requests = "^2.31.0"
toml = "^0.10.2"
sentry-sdk = {extras = ["flask"], version = "^1.26.0"}
posthog = "^3.0.1"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
